--- a/shippable.yml
+++ b/shippable.yml
@@ -2,7 +2,7 @@ language: python
 python:
  - 2.6
  - 2.7
-install: echo "Nothing to install"
+install: echo "Nothing to install at all"
 before_script: echo $VIRTUALENV_PYTHON
 script:
  - if [ "$VIRTUALENV_PYTHON" == "2.6" ]; then echo "bail out now"; exit 1; fi
